# scrap

cpp/: CMakeLists.txt  tutorial.cxx
cpp/boost_features/: CMakeLists.txt  boostfun.cc  boostfun.hpp
go/docker_sample/: Dockerfile
go/docker_sample/src/: main.go
go/tutorials/src/: go.mod  main.go  math.go
python/loop/: temp.py
ruby/: ri20min.rb
